--- a/attributes/css/style-geral.css
+++ b/attributes/css/style-geral.css
@@ -5,6 +5,11 @@
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+:root {
+    --primary-color: #246286;
+    --second-color: #80a5bb;
+}
+
 body {
     background-color: #f0ffff;
 }
@@ -14,52 +19,42 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 80px auto 50px;
+    grid-template-rows: 150px auto 100px;
     grid-template-areas: 
     "header header header"
     "aside-left main aside-right"
-    "footer footer footer"
-    ;
+    "footer footer footer";
     padding: 1px;
 }
 
 header {
     grid-area: header;
-    width: 100%;
-    background-color: beige;
+    padding: 5%;
+    background-color: var(--primary-color);
     text-align: center;
 }
 
 .main-content {
+    grid-area: main;
+    background-color: var(--second-color);
+    padding: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .left-aside {
     grid-area: aside-left;
-    background-color: aquamarine;
     padding: 20px;
 }
 .right-aside {
     grid-area: aside-right;
-    background-color: aquamarine;
     padding: 20px;
 }
-
-main {
-    grid-area: main;
-    background-color: #4285f4;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
 footer {
     grid-area: footer;
     padding: 20px;
-    background-color: beige;
+    background-color: var(--primary-color);
     text-align: center;
 }
