--- a/attributes/css/style-geral.css
+++ b/attributes/css/style-geral.css
@@ -29,7 +29,10 @@ body {
 
 header {
     grid-area: header;
-    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: var(--primary-color);
     text-align: center;
 }
