--- a/attributes/css/style-geral.css
+++ b/attributes/css/style-geral.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 :root {
@@ -30,11 +29,18 @@ body {
 header {
     grid-area: header;
     display: flex;
+    font-size: 14pt;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: var(--primary-color);
     text-align: center;
+}
+
+header > p {
+    font-size: 16pt;
+    font-weight: 900;
+    font-family: 'Londrina Sketch', cursive;
 }
 
 .main-content {
