--- a/attributes/css/style-itens.css
+++ b/attributes/css/style-itens.css
@@ -1,7 +1,8 @@
 .item-card {
     width: 250px;
     height: 200px;
-    margin: 10px;
+    margin: 20px;
+    margin-bottom: 50px;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -10,7 +11,7 @@
 }
 
 .item-card.scale {
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
 .item-card:hover {
