--- a/attributes/css/style-P.css
+++ b/attributes/css/style-P.css
@@ -5,19 +5,19 @@
 }
 
 :root {
-    --primary-color: #246286;
-    --second-color: #80a5bb;
+    --primary-color: #24866d;
+    --second-color: #80bbb6;
 }
 
 body {
-    background-color: #f0ffff;
+    background-color: #d1ffff;
 }
 
 .container {
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 10fr 1fr;
     grid-template-rows: 150px auto 100px;
     grid-template-areas: 
     "header header header"
