--- a/attributes/css/style-P_itens.css
+++ b/attributes/css/style-P_itens.css
@@ -1,24 +1,46 @@
-.main-content {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
+.item-box {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s;
+  margin: 20px;
+  max-width: 500px;
 }
 
-.item-box {
-  border: 1px solid;
-  height: 300px;
-  width: 30vw;
-  text-align: center;
-  border-radius: 0 0 15px 15px;
+.item-box:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .item-title {
+  background-color: #333;
+  color: white;
   padding: 10px;
-  background-color: aliceblue;
-  border-bottom: 1px solid;
+  font-size: 18px;
+  text-align: center;
 }
 
-.main-content img {
-  width: 100%;
-  height: 200px;
+.item-content {
+  max-width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.item-links {
+  text-align: center;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 16pt;
+  padding: 10px;
+}
+
+.item-links a {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+.item-links a:hover {
+  text-decoration: underline;
 }
